client/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");

html,
body,
#root {
  height: 100%;
  width: 100%;
  font-family: "Inter", sans-serif;
  background-color: #1f2026;
}

